fix: visual dos botoes de ação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
   </ng-template>
 
   <ng-template pTemplate="end">
-    <p-button label="Contato" icon="pi pi-envelope" class="p-button-text p-mr-2" (click)="contato()"></p-button>
-    <p-button label="Sobre" icon="pi pi-info-circle" class="p-button-text" (click)="sobre()"></p-button>
+    <p-button label="Contato" variant="text" icon="pi pi-envelope" (click)="contato()"></p-button>
+    <p-button label="Sobre"  variant="text" icon="pi pi-info-circle" (click)="sobre()"></p-button>
   </ng-template>
 </p-menubar>
 
