--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,1 +1,3 @@
-<p>sobre works!</p>
+<div class="flex align-items-center gap-4 p-4" style="background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.07)">
+  InvestFX é uma ferramenta para simulação de renda fixa para facilitar a escolha de investimentos.
+</div>
