add: ReverseTyping incompleto

--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,3 +1,8 @@
 <div class="flex align-items-center gap-4 p-4" style="background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.07)">
-  InvestFX é uma ferramenta para simulação de renda fixa para facilitar a escolha de investimentos.
+  <p> <strong>InvestFX</strong> é uma ferramenta desenvolvida para oferecer uma análise clara e comparativa de <em>investimentos em renda fixa</em>.
+  Com o simulador, você pode <em>testar diferentes cenários</em> e visualizar a <em>rentabilidade</em> de cada opção,
+    facilitando a escolha do investimento <em>mais interessante</em> e <em>rentável</em> de acordo com seu perfil e objetivos.
+  Dessa forma, o InvestFX permite tomar decisões mais <em>informadas</em> e <em>seguras</em> na busca pelos melhores resultados financeiros.
+  </p>
+
 </div>
