--- a/src/app/simulacao/simulacao.component.scss
+++ b/src/app/simulacao/simulacao.component.scss
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; // Centraliza verticalmente
+  min-height: 100vh;
   padding: 20px;
   background: #f5f5f5;
 }
 
 .card-container {
   width: 40%;
-  min-width: 400px; // Evita que fique muito estreito
+  min-width: 400px;
 }
 
 .p-card {
@@ -72,7 +72,6 @@ label {
   min-width: 100px;
   width: 200px;
   display: flex;
-  justify-content: center;
   align-items: center;
 
 }
